Corrected typo in code lasso_mod -> lasso_model

--- a/Notebooks/3_Modeling.Rmd
+++ b/Notebooks/3_Modeling.Rmd
@@ -282,7 +282,7 @@ lasso_model <- train(
   preProcess = process_strat
 )
 # best tuning parameters
-lasso_best <- lasso_mod$bestTune
+lasso_best <- lasso_model$bestTune
 # Testing set performance
 lasso_preds   <- predict(lasso_model, test_data)
 lasso_probs   <- predict(lasso_model, test_data, type = "prob")[, "Yes"]
