--- a/Notebooks/1_data_extraction.Rmd
+++ b/Notebooks/1_data_extraction.Rmd
@@ -114,7 +114,7 @@ full_cols <- c(
 # read_table, read_csv proved difficult to use to extract
 # outline is to use the occurrence of 'name' to distinguish unique observations
 # extract all the lines
-va_raw_lines <- readLines("../Data/Raw/long-beach-va.data")
+va_raw_lines <- readLines(here("Data/Raw", "long-beach-va.data"))
 # merge all lines into one string
 va_all_text <- paste(va_raw_lines, collapse = " ")
 # split each observation on name
@@ -140,7 +140,7 @@ va_df_raw$location <- "VA Long Beach"
 #### Hungary
 
 ```{r Hungary_data_importing}
-lines <- readLines(here("Data", "Raw/hungarian.data"))
+lines <- readLines(here("Data/Raw", "hungarian.data"))
 
 # Step 2: Combine every 10 lines per patient
 patient_blocks <- split(lines, ceiling(seq_along(lines) / 10))
@@ -176,7 +176,7 @@ hu_df_raw <- hu_df_raw %>%
 ```{r Switzerland_importing}
 # Generative AI used to write code to read in .data file
 # Step 1: Read the file
-lines <- readLines(here("Data", "Raw/switzerland.data"))
+lines <- readLines(here("Data/Raw", "switzerland.data"))
 
 # Step 2: Combine every 10 lines per patient
 patient_blocks <- split(lines, ceiling(seq_along(lines) / 10))
@@ -212,7 +212,7 @@ sw_df_raw <- sw_df_raw %>%
 # read_table, read_csv proved difficult to use to extract
 # outline is to use the occurrence of 'name' to distinguish unique observations
 # extract all the lines
-clvd_raw_lines <- readLines("../Data/Raw/cleveland.data", 
+clvd_raw_lines <- readLines(here("Data/Raw", "cleveland.data"),
                             warn = FALSE)
 #clvd_raw_lines
 # merge all lines into one string
@@ -254,6 +254,6 @@ merged_df
 
 # write the merged raw file out to the raw data folder as 'merged_df_raw.csv'
 # export to file
-write.csv(merged_df, "../Data/Raw/merged_df_raw.csv", 
+write.csv(merged_df, here("Data/Raw", "merged_df_raw.csv"), 
           row.names = FALSE)
 ```
